Terminal: Adds a simple terminal emulator
The terminal emulator replicates Bash and
supports multiple commands, like help, clear
exit, and history.

It also supports history cycling through the
arrow keys, clearing the screen, etc.

Not very extensive but a nice easter egg.

--- a/index.html
+++ b/index.html
@@ -2,46 +2,22 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Andrés Vieira</title>
+  <title>Andrés Vieira</title>
 
-    <link rel="icon" href="#" type="image/png" />
+  <link rel="icon" href="#" type="image/png" />
 
-    <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body><pre>
+<body>
+  <pre>
+<div id="stdout"></div><span id="commandLine"><span id="prompt" class="cl-red">~ λ</span> <textarea autofocus rows="1" class='console-input'></textarea></span>
 
-
-
-  <span class="cl-red">~ λ</span> ./about_myself
-
-        Name: <b>Andrés Vieira</b>
-        Nick(s): <i>ndrs, zlotny</i>
-        Email: <a href="mailto:anvieiravazquez@gmail.com">anvieiravazquez(at)gmail.com</a>
-
-        I'm a full-stack software engineer, driven by passion, restless of learning.
-
-        I just like computers, building stuff and learning new things. I'm also fond of refining
-        my way of doing things.
-
-        I'm from north-east Spain; I like videogames, motorcycles, gadgets and fantasy settings.
-        I also have a pet cockatiel called Lelo.
-
-        You can find me on:
-
-         - <a target="_blank" href="https://github.com/zlotny">GitHub</a>
-         - <a target="_blank" href="https://linkedin.com/in/andrés-vieira-5393aaa4/">LinkedIn</a>
-         - <a target="_blank" href="https://twitter.com/ndrs_">Twitter</a>
-         - <a target="_blank" href="https://www.instagram.com/zlotny/">Instagram</a>
-
-        :)
-
-  <span class="cl-red">~ λ</span> <textarea autofocus rows="1" class='console-input'></textarea>
 </pre>
 </body>
 <script src="./js/main.js"></script>
