Terminal: Disables autocapitalization in input
Disables the autocapitalization and
autocorrection on supported devices

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <pre>
-<div id="stdout"></div><span id="commandLine"><span id="prompt" class="cl-red">~ λ</span> <textarea autofocus rows="1" class='console-input'></textarea></span>
+<div id="stdout"></div><span id="commandLine"><span id="prompt" class="cl-red">~ λ</span> <textarea autofocus autocorrect="off" autocapitalize="none" rows="1" class='console-input'></textarea></span>
 
 </pre>
 </body>
